<resources>
    <string name="app_name">Adopt Un Info.com</string>
    <!-- Misc -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- global -->
    <string name="connexion">Connexion</string>
    <string name="valid">Valider</string>
    <string name="inscription">Inscription</string>
    <string name="retour">Retour</string>
    <string name="recherche">Trouver quelqu\'un</string>
    <string name="avoirNum">Avoir le numéro</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- main -->
    <string name="bienvenue">Bienvenue Sur AdoptUnInfo.com</string>

    <!-- Inscription / Modification -->
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="dateNaiss">Date de naissance :</string>
    <string name="sexe">Sexe :</string>
    <string name="tel">Téléphone :</string>
    <string name="pass">Mot de passe :</string>
    <string name="inter">Intéressé par :</string>
    <string name="dept">Departement :</string>
    <string name="annee">Annee en cours :</string>
    <string name="descr">Description :</string>

    <string name="modif">Modification</string>
    <string name="profil">Profil</string>
    
    <!-- genres -->
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="both">Les deux</string>

    <!-- profil -->
    <string name="mon">Mon</string>


</resources>
