<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/modif"
            android:id="@+id/lblModif"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profil"
            android:id="@+id/lblprofil"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:id="@+id/lblNom" />
            <EditText
                android:layout_marginLeft="110dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/nom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:id="@+id/lblPrenom" />
            <EditText
                android:layout_marginLeft="90dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/prenom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateNaiss"
                android:id="@+id/lblDateNais" />
            <EditText
                android:layout_marginLeft="25dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/dateNais"
                android:hint="XX/XX/XXXX"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexe"
                android:id="@+id/lblSexe" />
            <RadioGroup
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:id="@+id/grpSex">
                <RadioButton
                    android:layout_marginLeft="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femme"
                    android:id="@+id/femme"/>
                <RadioButton
                    android:layout_marginLeft="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homme"
                    android:id="@+id/homme"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:id="@+id/lblTel" />
            <EditText
                android:layout_marginLeft="75dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tel"
                android:phoneNumber="true"
                android:hint="XXXXXXXXXX"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:id="@+id/lblMdp" />
            <EditText
                android:layout_marginLeft="56dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/mdp"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inter"
                android:id="@+id/lblOrient" />
            <RadioGroup
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:id="@+id/grpInter">
                <RadioButton
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femme"
                    android:id="@+id/femmeO"/>
                <RadioButton
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homme"
                    android:id="@+id/hommeO"/>
                <RadioButton
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both"
                    android:id="@+id/deuxO"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dept"
                android:id="@+id/lblDep" />
            <ExpandableListView
                android:layout_marginLeft="55dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listDep"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annee"
                android:id="@+id/lblAnne" />
            <ExpandableListView
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listAnne"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descr"
                android:id="@+id/lblDescription" />
            <EditText
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="3"
                android:gravity="top|left"
                android:maxLines="6"
                android:scrollbars="vertical"
                android:layout_marginLeft="70dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/description"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/valid"
                android:id="@+id/valider"/>
            <Button
                android:layout_marginLeft="10dp"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/retour"
                android:id="@+id/retour"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>