<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="7"
        android:scrollbars="vertical"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:hint="@string/lorem"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nom"
        android:hint="Nom"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prenom"
        android:hint="Prenom"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sexe"
        android:hint="Sexe"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateNais"
        android:hint="XX/XX/XXXX"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/depart"
            android:hint="Departement"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anne"
            android:hint="Anne"/>
    </LinearLayout>


    <Button
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/avoirNum"
        android:id="@+id/avoirNum"/>
    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:id="@+id/retour"
        android:textSize="8dp" />


</LinearLayout>