<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:maxLines="7"
        android:scrollbars="vertical"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:hint="@string/lorem"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nom"
        android:hint="Nom"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prenom"
        android:hint="Prenom"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sexe"
        android:hint="Sexe"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateNais"
        android:hint="XX/XX/XXXX"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tel"
        android:hint="XXXXXXXXXX"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp"
        android:hint="Code Postal"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ville"
            android:hint="Ville"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/depart"
            android:hint="Departement"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/promotion"
            android:hint="Promotion"/>


    </LinearLayout>
        <Button
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/modif"
            android:id="@+id/modif"
            android:textSize="8dp" />

        <Button

            android:layout_gravity="center_horizontal"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/recherche"
            android:id="@+id/recherche"/>


</LinearLayout>
</ScrollView>